:bug: Fix bottom corner border radius getting cut off

--- a/packages/pw-component-input-group/style.css
+++ b/packages/pw-component-input-group/style.css
@@ -16,5 +16,6 @@
 
   & > *:last-child {
     border-bottom: 0;
+    border-radius: initial initial var(--defaultBorderRadius) var(--defaultBorderRadius);
   }
 }
